<resources>
    <string name="app_name">AppBitacora</string>


    <!-- Lauput Persona -->
    <string name="l_matricula">Matricula</string>
    <string name="l_correo">Correo</string>
    <string name="l_nombre">Nombre</string>
    <string name="l_carrera">Carrera</string>
    <string name="l_gradogrupo">Grado y Grupo</string>
    <string name="l_rol">Rol</string>
    <string name="l_contra">Ingresa tu contraseña...</string>
    <string name="l_botonRegistrar">Registrar</string>
    <string name="l_botonActualizar">Actualizar</string>
    <string name="l_botonDescativar">Desactivar</string>
    <string name="l_botonRegresar">Regresar</string>

    <!-- Menu Admin -->
    <string name="a_m_btn_salir">Salir</string>
    <string name="a_m_btn_mostrar">Mostrar Alumnos</string>
    <string name="a_m_btn_registrar">Registrar Alumno</string>
    <string name="a_m_btn_inicio">Inicio</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <!-- Layout Labs -->
    <string name="l_labs_id">Id</string>
    <string name="l_labs_nom">Nombre Lab</string>
    <string name="l_labs_docencia">Docencia</string>
    <string name="l_labs_estatus">Estatus</string>
    <!-- Menu Admin -->
    <string name="m_labs_mostrar">Mostrar</string>
    <string name="m_labs_registrar">Registrar</string>

    <string name="p_inisio_sesion_btn">Iniciar Sesión</string>
    <string name="m_inisio_sesion_txt_correo">Ingresa tu matricula...</string>
    <string name="m_inisio_sesion_txt_cintra">Contraseña</string>
    <string name="m_inisio_sesion_txt_cerrarsesion">Cerrar Sesión</string>
    <string name="m_registro_txt_matricula">Matricula</string>
    <string name="m_resistro_txt_horaInicio">Hora de inicio</string>
    <string name="m_registro_txt_horaFinal">Hora Final</string>
    <string name="m_registro_txt_docente">Docente</string>
    <string name="m_registro_txt_comentario">comentario</string>
    <string name="m_registro_txt_fecha1">Fecha</string>
    <string name="m_registro_txt_descripcion">Descripción</string>
</resources>