<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:background="#F3F4F6">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="#FFFFFF"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Sección de Matrícula -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/l_matricula"
                    android:textColor="#4A4A4A"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins" />

                <TextView
                    android:id="@+id/txtMatricula"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20233tn0999"
                    android:textColor="#333333"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins" />
            </LinearLayout>

            <!-- Sección de Nombre -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/l_nombre"
                    android:textColor="#4A4A4A"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins" />

                <TextView
                    android:id="@+id/txtNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Juan"
                    android:textColor="#333333"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins" />
            </LinearLayout>

            <!-- Sección de Correo -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/l_correo"
                    android:textColor="#4A4A4A"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins" />

                <TextView
                    android:id="@+id/txtCorreo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20233tn075@utez.edu.mx"
                    android:textColor="#333333"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins" />
            </LinearLayout>

            <!-- Sección de Carrera -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/l_carrera"
                    android:textColor="#4A4A4A"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins" />

                <TextView
                    android:id="@+id/txtCarrera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="DSM"
                    android:textColor="#333333"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins" />
            </LinearLayout>

            <!-- Sección de Grado y Grupo -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/l_gradogrupo"
                    android:textColor="#4A4A4A"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins" />

                <TextView
                    android:id="@+id/txtGraadoG"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4E - DSM"
                    android:textColor="#333333"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins" />
            </LinearLayout>

            <!-- Sección de Rol -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/l_rol"
                    android:textColor="#4A4A4A"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins" />

                <TextView
                    android:id="@+id/txtRol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Alumno"
                    android:textColor="#333333"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
